k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-sample-http
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: grpc-sample
